--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,6 @@
 [mypy]
 warn_unused_configs = True
-mypy_path = app
-
-
-[mypy-pythonjsonlogger,aiochclient,aiochclient.*]
-ignore_missing_imports = True
+python_version = 3.12
+strict = True
+namespace_packages = True
+explicit_package_bases = True
