--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,21 @@
 [tool.poetry]
 name = "cloudflare-dynamic-dns"
 version = "0.1.0"
-description = ""
+description = "Dynamic DNS updater for Cloudflare"
 authors = ["Gleb Nikiforov <lomdjaria11@gmail.com>"]
 readme = "README.md"
 package-mode = false
 
+[tool.poetry.scripts]
+cloudflare-ddns = "app.main:main"
+
 [tool.poetry.dependencies]
 python = "^3.12"
+cloudflare = "^4.3.1"
+pydantic = "^2.12.4"
+pydantic-settings = "^2.12.0"
+structlog = "^25.5.0"
+httpx = "^0.28.1"
 
 
 [tool.poetry.group.dev.dependencies]
