--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ ruff = "^0.14.6"
 pre-commit = "^4.5.0"
 fawltydeps = "^0.20.0"
 bumpversion = "^0.6.0"
+pytest = "^9.0.1"
+pytest-coverage = "^0.0"
+pytest-asyncio = "^1.3.0"
 
 
 [build-system]
@@ -67,4 +70,13 @@ ignore_unused = [
     "pre-commit",
     "ruff",
     "bumpversion",
+    "pytest",
+    "pytest-asyncio",
+    "pytest-coverage",
 ]
+
+[tool.pytest.ini_options]
+addopts = "-ra"
+testpaths = ["tests"]
+pythonpath = ["."]
+asyncio_mode = "strict"
