--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -10,3 +10,7 @@ replace = version = "{new_version}"
 [bumpversion:file:app/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
+[bumpversion:file:.github/workflows/ci.yml]
+search = APP_VERSION: "{current_version}"
+replace = APP_VERSION: "{new_version}"
