--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: CI
 
+env:
+  APP_VERSION: "0.1.0"
+
 on: [push, pull_request]
 
 jobs:
@@ -42,3 +45,27 @@ jobs:
       - name: Run tests
         run: make test
 
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: test
+    # Only push images for pushes to main, not PRs
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+      # check marketplace for latest version of this action
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/cloudflare-ddns:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/cloudflare-ddns:${{ env.APP_VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/cloudflare-ddns:${{ github.sha }}
