--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,12 @@ name: CI
 
 env:
   APP_VERSION: "0.1.0"
+  POETRY_VERSION: "2.2.1"
 
 on: [push, pull_request]
 
 jobs:
-  lint:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,37 +18,20 @@ jobs:
           python-version: "3.12"
 
       - name: Install Poetry
-        run: pip install poetry==2.2.1
+        run: pip install poetry==${{ env.POETRY_VERSION }}
 
       - name: Install dependencies
-        run: poetry install --no-interaction --no-ansi
+        run: poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi
 
       - name: Run linters
         run: make check
-
-  test:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
-      - name: Install Poetry
-        run: pip install poetry==2.2.1
-
-      - name: Install dependencies
-        run: poetry install --no-interaction --no-ansi
 
       - name: Run tests
         run: make test
 
   build-and-push:
     runs-on: ubuntu-latest
-    needs: test
+    needs: check
     # Only push images for pushes to main, not PRs
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
