--- a/.gitignore
+++ b/.gitignore
@@ -596,6 +596,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+# VSCode
+.vscode/
+
 *.env
 
 # Ruff
@@ -605,4 +608,6 @@ cython_debug/
 .coverage
 coverage.xml
 report.xml
+
+# Config
 /config/records.json
